name:               phash-search
version:            0.0.1
synopsis:           Haskell bindings to pHash and tree building/querying
description:        See http://www.phash.org/ for more info. Note that you
                    must have libphash installed on your system to use this
                    library. Check your system library.
license:            MIT
author:             Andrew Tulloch <andrew@tullo.ch>
maintainer:         Andrew Tulloch <andrew@tullo.ch>
copyright:          Copyright: (c) 2014 Andrew Tulloch
category:           Data
build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: README.md
homepage:           http://github.com/ajtulloch/phash-hs
bug-reports:        http://github.com/ajtulloch/phash-hs/issues

executable PHash
  main-is: Main.hs
  GHC-Options: -Wall
  build-depends:    base >= 4.6 && < 4.8
                  , phash-search
                  , directory
                  , filepath
                  , directory-tree
                  , optparse-applicative
                  , cereal
                  , bytestring
                  , hslogger
                  , vector
                  , cereal-vector
  default-language: Haskell2010
  extra-libraries:  pHash

library
  exposed-modules:  PHash
  GHC-Options: -Wall
  build-depends:    base >= 4.6 && < 4.8
                  , directory
                  , filepath
                  , directory-tree
                  , optparse-applicative
                  , cereal
                  , bytestring
                  , hslogger
                  , vector
                  , cereal-vector
  default-language: Haskell2010
  extra-libraries:  pHash
